--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@
     padding: 0;
 }
 
+nav{
+    position: sticky;
+    font-size: 25px;
+    color: white;
+    background-color: black;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.github{
+    font-size: 15px;
+    color: white;
+}
+
 body{
     height: 100vh;
     width: 100vw;
@@ -15,6 +31,7 @@ body{
     justify-content: start;
     align-items: center;
     font-family: "Quicksand", serif;
+    background-color: #fff7ec;
 }
 
 h1{
@@ -31,11 +48,15 @@ h1{
 
 a{
     text-decoration: none;
-    color: rgb(23, 23, 23);
-    background-color: beige;
+
+}
+
+.bttn{
+    color: rgb(0, 0, 0);
+    background-color: #fce0ce;
     padding: 12px;
     border-radius: 50px;
     margin: 12px;
     font-size: 18px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
