--- a/sorting.css
+++ b/sorting.css
@@ -1,8 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway:ital,wght@0,100..900;1,100..900&family=Square+Peg&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     font-family: "Quicksand", serif;
 
+}
+
+a{
+    text-decoration: none;
+}
+
+h2{
+    margin: 40px;
+}
+
+nav{
+    position: sticky;
+    font-size: 25px;
+    color: white;
+    background-color: black;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.github{
+    font-size: 15px;
+    color: white;
 }
 
 #main{
